# langchain-course

./: .env.example  .gitignore  README.md  pyproject.toml
Ollama/1_chat_models/: 1_chat_model_basic.py  2_chat_model_basic_conversation.py  4_chat_model_basic_conversation_with_user.py  5_chat_model_save_message_history_firebase.py
Ollama/2_prompt_templates/: 2_prompt_templates_with_chat_model.py
Ollama/3_chains/: 1_chains_basics.py  2_chains_under_the_hood.py  3_chains_extended.py  4_chains_parallel.py  5_chains_branching.py
Ollama/4_rag/: 1a_rag_basics.py  1b_rag_basics.py  2a_rag_basics_metadata.py  2b_rag_basics_metadata.py  3_rag_text_splitting_deep_dive.py
OpenAI/: 2_chat_model_basic_conversation.py
OpenAI/1_chat_models/: 1_chat_model_basic.py  3_chat_model_alternatives.py  4_chat_model_basic_conversation_with_user.py  5_chat_model_save_message_history_firebase.py
OpenAI/2_prompt_templates/: 1_prompt_template_basic.py  2_prompt_templates_with_chat_model.py
OpenAI/3_chains/: 1_chains_basics.py  2_chains_under_the_hood.py  3_chains_extended.py  4_chains_parallel.py  5_chains_branching.py
OpenAI/4_rag/: 1a_rag_basics.py  1b_rag_basics.py  2a_rag_basics_metadata.py  2b_rag_basics_metadata.py  3_rag_text_splitting_deep_dive.py
